--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "siripravi\\catalog\\": "src/"
+      "siripravi\\catalog\\admin\\": "src/"
     }
   },
   "config": {
