--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     }
   ],
   "require": {
-    "yiisoft/yii2-bootstrap5": "~2.0.2"
+    "yiisoft/yii2-bootstrap5": "~2.0.2",
+    "luyadev/luya-module-gallery": "^1.0"
   },
   "autoload": {
     "psr-4": {
